--- a/src/app/products/components/product/product.component.html
+++ b/src/app/products/components/product/product.component.html
@@ -1,1 +1,8 @@
-<p>product works!</p>
+<div class="card mb-4">
+    <img [src]="item.image" class="card-img-top mt-3" alt={{item.title}} />
+    <div class="card-body">
+      <h5 class="card-title">{{ item.title }}</h5>
+      <p class="card-text">{{ item.description | wordLimit:15}}</p>
+      <a routerLink="" class="btn btn-primary text-white"> <i class="fa fa-shopping-cart me-1"></i> add to cart</a>
+    </div>
+</div>
