--- a/src/app/products/components/products-list/products-list.component.html
+++ b/src/app/products/components/products-list/products-list.component.html
@@ -1,2 +1,20 @@
-<p>products-list works!</p>
-<!-- <router-outlet></router-outlet> -->
+<div class="container">
+  <div class="row mb-4">
+    <div class="offset-md-3 col-md-3 mb-3">
+      <input class="form-control" type="search" placeholder="Search" />
+    </div>
+    <div class="col-md-2">
+      <select class="form-select">
+        <option selected>All Categories</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6 col-lg-4" *ngFor="let product of products">
+    <app-product [item]="product"></app-product>
+    </div>
+  </div>
+</div>
