--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<footer class="bg-primary text-white py-3">
+  <div class="container">
+    Copyright &copy; 2023. All right reserved .
+  </div>
+</footer>
