--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,19 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg bg-primary mb-4">
+  <div class="container">
+    <a class="navbar-brand text-white text-xl" routerLink="/products">Shop<span class="text-dark">Ninja</span></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav flex-grow-1 justify-content-between mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/products" routerLinkActive="my-active">Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/feature/cart" routerLinkActive="my-active"><i class="fa fa-shopping-cart"></i></a>
+        </li>
+      </ul>
+
+    </div>
+  </div>
+</nav>
