--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="bg-primary text-white py-3">
+<footer class="bg-primary text-white text-center py-3">
   <div class="container">
     Copyright &copy; 2023. All right reserved .
   </div>
