--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-primary mb-4">
   <div class="container">
-    <a class="navbar-brand text-white text-xl" routerLink="/products">Shop<span class="text-dark">Ninja</span></a>
+    <a class="navbar-brand text-white" routerLink="/products">Shop<span class="text-dark">Ninja</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,8 +9,9 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/products" routerLinkActive="my-active">Products</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item position-relative">
           <a class="nav-link" routerLink="/feature/cart" routerLinkActive="my-active"><i class="fa fa-shopping-cart"></i></a>
+          <span class="position-absolute">1</span>
         </li>
       </ul>
 
