--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,8 +1,26 @@
-.nav-link{
-    color: #000; 
-    font-size: 18px;
+.navbar-brand {
+  font-size: 22px;
+  font-weight: bold;
 }
-.my-active
-{
+.nav-item {
+  .nav-link {
+    color: #000;
+    font-size: 20px;
+  }
+  .my-active {
     color: #fff;
+  }
+  span {
+    color: red;
+    top: 2px;
+    left: 25px;
+    width: 25px;
+    height: 25px;
+    line-height: 25px;
+    font-weight: bold;
+    font-size: 14px;
+    border-radius: 50%;
+    text-align: center;
+    background-color: #fff;
+  }
 }
