--- a/src/app/products/components/product-details/product-details.component.html
+++ b/src/app/products/components/product-details/product-details.component.html
@@ -1,1 +1,16 @@
-<p>product-details works!</p>
+<div class="container mt-5">
+  <div class="card my-4 p-4 text-center">
+    <img
+      [src]="product.image"
+      class="card-img-top"
+      alt="{{ product.title }}"
+    />
+    <div class="card-body">
+      <h3 class="card-title mb-3">{{ product.title }}</h3>
+      <span class="item-price text-primary fa-2x d-block mb-3">{{ product.price }} EGP</span>
+      <p class="card-text">{{ product.description }}</p>
+      <span class="rating text-warning fa-2x">{{product.rating?.rate | stars}}</span>
+      <span class="count d-block mt-4">IN STOCK : {{product.rating?.count}}</span>
+    </div>
+  </div>
+</div>
