--- a/src/app/products/components/product/product.component.html
+++ b/src/app/products/components/product/product.component.html
@@ -1,6 +1,7 @@
 <div class="card mb-4">
     <img [src]="item.image" class="card-img-top mt-3" alt={{item.title}} />
     <div class="card-body">
+      <i class="fas fa-eye text-primary" title="show details" (click)="onNavigate()"></i>
       <h5 class="card-title">{{ item.title | wordLimit:6}}</h5>
       <span class="item-price text-primary">{{item.price}} EGP</span>
       <p class="card-text">{{ item.description | wordLimit:10}}</p>
