--- a/src/app/products/components/product/product.component.scss
+++ b/src/app/products/components/product/product.component.scss
@@ -14,6 +14,15 @@
     width: 200px;
     margin: auto;
   }
+  .fa-eye
+  {
+    position: absolute;
+    z-index: 2; 
+    font-size: 22px;
+    font-weight: bold;
+    right: 50px;
+    top: 40px;
+  }
   .item-price
   {
     font-size: 18px;
