add shopping cart implementation

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -11,7 +11,7 @@
         </li>
         <li class="nav-item position-relative">
           <a class="nav-link" routerLink="/feature/cart" routerLinkActive="my-active"><i class="fa fa-shopping-cart"></i></a>
-          <span class="position-absolute">1</span>
+          <span class="position-absolute">{{cartProdNumber}}</span>
         </li>
       </ul>
 
