--- a/src/app/feature/components/cart/cart.component.html
+++ b/src/app/feature/components/cart/cart.component.html
@@ -1,1 +1,38 @@
-<p>cart works!</p>
+<div class="container mb-3">
+<div class="row">
+  <div class="offset-md- col-md-12">
+    <table class="table table-striped text-center">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Image</th>
+          <th scope="col">Title</th>
+          <th scope="col">Quantity</th>
+          <th scope="col">Price</th>
+          <th scope="col">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of products; let i = index">
+          <th class="counter" scope="row">{{ i + 1 }}</th>
+          <td>
+            <img
+              [src]="item.image"
+              style="width: 50px; height: 50px"
+              alt="{{ item.title }}"
+            />
+          </td>
+          <td>{{ item.title | wordLimit : 5 }}</td>
+          <td >
+            <span class="increase text-white bg-secondary rounded-2">+</span>
+            <span class="mx-5">0</span>
+            <span class="decrease text-white bg-secondary rounded-2">-</span> 
+          </td>
+          <td>{{ item.price }} EGP</td>
+          <td class="text-danger" style="cursor:pointer"><i class="fa-solid fa-trash-can"></i></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
+</div>
