--- a/src/app/products/components/product/product.component.html
+++ b/src/app/products/components/product/product.component.html
@@ -5,6 +5,6 @@
       <h5 class="card-title">{{ item.title | wordLimit:6}}</h5>
       <span class="item-price text-primary">{{item.price}} EGP</span>
       <p class="card-text">{{ item.description | wordLimit:10}}</p>
-      <a routerLink="" class="btn btn-primary text-white"> <i class="fa fa-shopping-cart me-1"></i> add to cart</a>
+      <a routerLink="" (click)="onAddToCart(item)" class="btn btn-primary text-white"> <i class="fa fa-shopping-cart me-1"></i> add to cart</a>
     </div>
 </div>
