add Quantity to each product

--- a/src/app/products/components/product/product.component.scss
+++ b/src/app/products/components/product/product.component.scss
@@ -53,6 +53,10 @@
     visibility: visible;
     z-index: 2;
   }
+  .quantity input , .quantity button 
+  {
+    z-index: 2; 
+  }
 }
 // Media Query
 @include breakPoints(large-screen) {
