--- a/src/app/products/components/product/product.component.html
+++ b/src/app/products/components/product/product.component.html
@@ -5,6 +5,10 @@
       <h5 class="card-title">{{ item.title | wordLimit:6}}</h5>
       <span class="item-price text-primary">{{item.price}} EGP</span>
       <p class="card-text">{{ item.description | wordLimit:10}}</p>
-      <a routerLink="" (click)="onAddToCart(item)" class="btn btn-primary text-white"> <i class="fa fa-shopping-cart me-1"></i> add to cart</a>
+      <a *ngIf="!isQuantityAdded" (click)="isQuantityAdded=true" class="btn btn-primary text-white"> <i class="fa fa-shopping-cart me-1"></i> add to cart</a>
+      <div *ngIf="isQuantityAdded" class="quantity d-flex justify-content-center">
+       <input type="number" [(ngModel)]="quantity" placeholder="Quantity" class="form-control me-2" style="width: 30%">
+       <button class="btn btn-primary" (click)="onAddToCart(item)">Add</button>
+      </div>
     </div>
 </div>
