--- a/src/app/products/components/product/product.component.html
+++ b/src/app/products/components/product/product.component.html
@@ -7,7 +7,7 @@
       <p class="card-text">{{ item.description | wordLimit:10}}</p>
       <a *ngIf="!isQuantityAdded" (click)="isQuantityAdded=true" class="btn btn-primary text-white"> <i class="fa fa-shopping-cart me-1"></i> add to cart</a>
       <div *ngIf="isQuantityAdded" class="quantity d-flex justify-content-center">
-       <input type="number" [(ngModel)]="quantity" placeholder="Quantity" class="form-control me-2" style="width: 30%">
+       <input type="number" min="1" [(ngModel)]="quantity" placeholder="Quantity" class="form-control me-2" style="width: 30%">
        <button class="btn btn-primary" (click)="onAddToCart(item)">Add</button>
       </div>
     </div>
